# G600Drivers

./: 99-g600.rules  bozo  default.conf  g600d.service  gay  install.sh  meson.build  reset.sh
daemon/: main.c
gui/: ConfigManager.cpp  ConfigManager.h  main.cpp  resources.qrc
gui/qml/: BindingEditor.qml  ButtonTile.qml  DpiPanel.qml  LedPanel.qml  OnboardPanel.qml  main.qml
tests/: dump_profile.c  led_test.c
